--- a/jenkinsfile
+++ b/jenkinsfile
@@ -40,7 +40,7 @@ pipeline {
         stage('SSH to Linux Machine') {
             steps {
                 sshagent(['ssh-credentials']) {
-                    sh 'ssh -o StrictHostKeyChecking=no user@linux-server-ip "docker pull $IMAGE_NAME:latest"'
+                    sh 'ssh -o StrictHostKeyChecking=no vboxuser@10.0.2.15 "docker pull $IMAGE_NAME:latest"'
                 }
             }
         }
@@ -48,7 +48,7 @@ pipeline {
         stage('Run Docker Container on Linux Machine') {
             steps {
                 script {
-                    sh 'ssh -o StrictHostKeyChecking=no user@linux-server-ip "docker run -d -p 5000:5000 $IMAGE_NAME:latest"'
+                    sh 'ssh -o StrictHostKeyChecking=no vboxuser@10.0.2.15 "docker run -d -p 5000:5000 $IMAGE_NAME:latest"'
                 }
             }
         }
@@ -56,7 +56,7 @@ pipeline {
         stage('Test Application on Linux Machine') {
             steps {
                 script {
-                    sh 'ssh -o StrictHostKeyChecking=no user@linux-server-ip "curl http://localhost:5000"'
+                    sh 'ssh -o StrictHostKeyChecking=no vboxuser@10.0.2.15 "curl http://localhost:5000"'
                 }
             }
         }
