--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,7 +23,10 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
-                    sh 'docker build -t $IMAGE_NAME:latest .'
+                    sh '''
+                    docker info || exit 1
+                    docker build -t $IMAGE_NAME:latest .
+                    '''
                 }
             }
         }
@@ -40,7 +43,9 @@ pipeline {
 
         stage('Push Docker Image to Registry') {
             steps {
-                sh 'docker push $IMAGE_NAME:latest'
+                script {
+                    sh 'docker push $IMAGE_NAME:latest'
+                }
             }
         }
 
